--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="given_accuracy_is_impossible">Достижение заданной точности невозможно</string>
     <string name="lat">Шир.</string>
     <string name="lon">Долг.</string>
-    <string name="position_coordinates">Координаты положения</string>
+    <string name="position_coordinates">Координаты положения:</string>
     <string name="accuracy">точность(м.)</string>
     <string name="settings">Настройки</string>
     <string name="location_is_not_defined">Местоположение не определено</string>
