--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="lon">lon.</string>
     <string name="accuracy">accuracy(m.)</string>
     <string name="settings">Settings</string>
+    <string name="permission_has_not_been_granted">Permission has not been granted to the given application.</string>
 </resources>
